<resources>
    <string name="app_name">Music LMS</string>
    <string name="title_activity_signin">Sign In</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign-Up</string>
    <string name="student_sign_up">Student Sign-up</string>
    <string name="teacher_sign_up">Teacher Sign-up</string>
    <string name="or">Or</string>
    <string name="already_an_user_click_here_to_be_redirected_to_login_page">Already An User click here to be redirected to login page</string>
    <string name="create_account">Create account</string>
    <string name="user__signup__Im_a">"I'm a…"</string>
    <string name="title_activity_assignment_create_form">Create Assignment</string>
    <string name="assignment__form__user_class">Student To Assign</string>
    <string name="action_settings">Settings</string>
    <string name="assignment__form__assignment_name">Assignment Name</string>
    <string name="assignment__form__due_date">Due Date</string>
    <string name="assignment__form__add_todo_item">Add ToDo Item</string>
    <string name="assignment__form__reuse_todo_item">Reuse Item</string>
    <string name="assignment__form__cancel_assignment">Cancel</string>
    <string name="assignment__form__cancel">Cancel</string>
    <string name="assignment__form__save">Save</string>
    <string name="assignment__form__add_todos">Add Todo\'s</string>
    <string name="title_activity_assignment_overview">Assignment Overview</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="assignment__overview__author_label">Author:</string>
    <string name="assignments__overview__name_label">Assignment Name</string>
    <string name="date_format__month_day">MMM d</string>
    <string name="title_activity_to_do_item_create_form">Create ToDo Item</string>
    <string name="to_do_item__form__name">Name</string>
    <string name="to_do_item__form__require_recording">Enable Recording</string>
    <string name="form__edit_button">Edit</string>
    <string name="user_profile_chat">Chat</string>
    <string name="form__delete_button">Delete</string>
    <string name="assignment__overview__user_label">Assignee</string>
    <string name="title_activity_user_search">Search for Users</string>
    <string name="title_activity_add_users">Add Users</string>
    <string name="title_activity_chat_landing">Chat with others</string>
    <string name="title_activity_user_main_profile">User Profile</string>
    <string name="title_activity_login">Log In</string>
    <string name="text_content">text</string>
    <string name="action_Language">Language</string>
    <string name="assignment__form__view_todos">To Do</string>
    <string name="form__view_button">View</string>
    <string name="title_activity_assignment_view">View Assignment</string>
    <string name="title_activity_to_do_item_view">View To Do Item</string>
    <string name="completed">Completed</string>
    <string name="addYoutubeUrl">YouTube Url</string>
    <string name="shareVideo">Share Video to Youtube</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">(Go)</string>
    <string name="seek_to_hint">Time</string>
    <string name="add_recording">Add Recording</string>
    <string name="add_recording_feedback__text">Add feedback text</string>
    <string name="hello">hello</string>
    <string name="please_add_comment">Please enter your comment</string>
    <string name="comment">comment</string>
    <string name="Write_a_message">Write a message...</string>
    <string name="user_name">Name</string>
    <string name="Add_New_Users">Add new users</string>
    <string name="Name_">Name:</string>
    <string name="Email_">Email:</string>
    <string name="Role_">Role:</string>
    <string name="Add">Add</string>
    <string name="Type_a_message">Type a message...</string>
    <string name="Send">Send</string>
    <string name="Enter_New_Name">Enter new name</string>
    <string name="Enter_New_Email">Enter new email</string>
    <string name="Confirm">Confirm</string>
    <string name="Reset_Password">Reset Password</string>
    <string name="Back">Back</string>
    <string name="Edit_Data">Edit Data</string>
    <string name="Enter_instruments_here">Enter instruments here</string>
    <string name="or_Register_an_account_here">or Register an account here</string>
    <string name="Preferred_Name">Preferred Name</string>
    <string name="Hi">Hi, I am ...</string>
    <string name="Teacher">Teacher</string>
    <string name="Student">Student</string>
    <string name="Select_Role">Select A Role To Continue</string>
    <string name="have_account">Already have an account? Login here</string>
    <string name="experience">I have experience ...</string>
    <string name="Sending">Sending a text message</string>
    <string name="Phone">Making a Phone call</string>
    <string name="Zoom">Joining a Zoom call</string>
    <string name="Schedule_Zoom">Schedule a Zoom call</string>
    <string name="Watching_YouTube">Watching a YouTube video</string>
    <string name="Uploading_YouTube">Uploading a YouTube video</string>
    <string name="Finish">Finish</string>
    <string name="Logout">Logout</string>
    <string name="user_preferred_name">Preferred Name</string>
    <string name="user_hi_i_am">Hi, I am ...</string>
    <string name="user_signup_email">Your email (or your parents)</string>
    <string name="user_signup_password">Password</string>
    <string name="user_signup_teacher">Teacher</string>
    <string name="user_signup_student">Student</string>
    <string name="user_signup_select_a_role_to_continue">Select A Role To Continue</string>
    <string name="user_signup_already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="profile_add_users">Add Users</string>
    <string name="profile_edit_data">Edit Data</string>
    <string name="profile_enter_instruments_here">Enter instruments here</string>
    <string name="profile_add">add</string>
    <string name="edit_enter_new_name">Enter New Name</string>
    <string name="edit_enter_new_email">Enter New Email</string>
    <string name="edit_name_confirm">Confirm</string>
    <string name="edit_confirm">Confirm</string>
    <string name="edit_reset_password">Reset Password</string>
    <string name="chat_type_a_message">Type a message…</string>
    <string name="chat_send">Send</string>
    <string name="signin_login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="add_users">Add Users</string>
    <string name="signin_or_register_an_account_here">or Register an account here</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="role">Role:</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="chat">Chat</string>
    <string name="add">Add</string>
    <string name="add_name">Name</string>
    <string name="add_new_users">Add New Users</string>
    <string name="user_profile__edit_data">Edit Data</string>
    <string name="add_attachment">+ Attachment</string>
    <string name="assignment_overview__user_profile">User Profile</string>
    <string name="assignment_overview__logout">Logout</string>
    <string name="attachment__pdf_ppload_preview">%s selected.</string>
    <string name="to_do_item__change_recording">Change Recording</string>
    <string name="to_do_view__error_feedback">Error parsing feedback</string>
    <string name="attachment__zoom_meeting">Meeting ID</string>
    <string name="attachment__zoom_password">Meeting Password</string>
    <string name="please_add_file">Please add file</string>
    <string name="toast__attachment__file_successful">File successfully uploaded</string>
    <string name="toast__attachment__file_failed">File Upload was not sucessful</string>
    <string name="attachment__upload_file">Upload</string>
    <string name="attachment__remove_file">Remove</string>
    <string name="attachment__download_file">Open Pdf</string>
    <string name="attachment__form__file_label">Upload PDF</string>
    <string name="attachment__add__file">Select PDF</string>
    <string name="no_file_is_selected">No PDF selected</string>
    <string name="upload">Upload</string>
    <string name="attachment__form__recording">Recording</string>
    <string name="attachment__form__zoomLabel">Zoom Meeting</string>
    <string name="attachment__form__scheduleZoomMeeting">Add Meeting</string>
    <string name="attachment__add__comment">Add Comment</string>
    <string name="attachment_dialog__add__comment">Add a comment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name">Music LMS</string>
    <string name="channel_description">Chat Messages</string>
    <string name="edit_assignment">Edit Assignment</string>
    <string name="assignment__student_done">Done?</string>
    <string name="assignment__teacher_marked">Mark?</string>
    <string name="Due_in_One_Week">Due in One or Less Weeks</string>
    <string name="Due_in_Two_Week">Due in Two Weeks</string>
    <string name="Due_in_Three_Week">Due in Three or More Weeks</string>
    <string name="user_analysis">Analysis</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_password">Enter your email to receive password reset link</string>
    <string name="error_link">Error! Reset link not sent</string>
    <string name="link_sent">Resent link sent to email</string>
    <string name="no_instrument">No instrument entered</string>
    <string name="already_added"> is already added</string>
    <string name="instrument_added">Instrument added</string>
    <string name="email_updated">Email updated</string>
    <string name="name_updated">Name updated</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="key">Key</string>
    <string name="user_created">User Created</string>
    <string name="email_error">Email is Required.</string>
    <string name="password_error">Password is Required</string>
    <string name="password_length_error">Password must be more than 5 characters</string>
    <string name="name_error">Name is Required</string>
    <string name="name_created">User Created</string>
    <string name="error">Error</string>
    <string name="user_deleted"> has been deleted.</string>
    <string name="cannot_add">Cannot add self</string>
    <string name="added"> added</string>
    <string name="toast__attachment__file_delete_successful">File successfully deleted</string>
    <string name="toast__attachment__file_delete_failed">File Delete failed.</string>
    <string name="attachment__open_zoom">Open Meeting</string>
    <string name="placeholder_date__sort">Dec. 30</string>
    <string name="assignment_overview__add_assignment">Add Assignment</string>
    <string name="stats">Stats</string>
    <string name="text_label_1">Assignments</string>
    <string name="text_label_2">User Profile</string>
    <string name="text_label_3">Chat</string>
    <string name="add_attachment_literal">Add Attachment</string>
</resources>