<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/left_and_right_gutters"
    android:orientation="vertical">

    <TextView
        android:id="@+id/addAttachmentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:text="@string/add_attachment_literal"
        android:layout_marginEnd="20dp"/>

    <!-- Dummy Element -->
    <LinearLayout
        android:id="@+id/commentAttachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toTopOf="parent" >


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:hint="@string/please_add_comment"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fileAttachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/commentAttachment"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/attachment__form__file_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent">
            <TextView
                android:id="@+id/notification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/no_file_is_selected"
                android:layout_weight="1"
                android:layout_marginEnd="20dp"/>

            <Button
                android:id="@+id/selectFile"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:text="@string/attachment__add__file"/>

            <Button
                android:id="@+id/uploadFile"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/attachment__upload_file"/>

            <Button
                android:id="@+id/removeFile"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/attachment__remove_file"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/zoomAttachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/attachment__form__zoomLabel" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/zoomMeeting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/attachment__zoom_meeting"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/zoomPasscode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/attachment__zoom_password"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/editZoomMeeting"
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attachment__form__scheduleZoomMeeting" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/zoomAttachment"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="end">

        <Button
            android:id="@+id/cancelAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/assignment__form__cancel" />

        <Button
            android:id="@+id/saveAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/assignment__form__save" />
    </LinearLayout>

</LinearLayout>